--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Donte Burney Personal Site</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css" integrity="sha384-eoTu3+HydHRBIjnCVwsFyCpUDZHZSFKEJD0mc3ZqSBSb6YhZzRHeiomAUWCstIWo" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="container">
@@ -23,6 +25,9 @@
             </nav>
         </header>
         <main>
+            <section id="#about">
+                <img id="profile-img" src="https://via.placeholder.com/150" />
+            </section>
             <section id="work">
                 <h1>Work Experience</h1>
                 <div>
@@ -45,7 +50,7 @@
             </section>
             <section id="projects">
                 <div>
-                    <div>Project 1</div>
+                    <div><a href="portfolio.html">Project 1</a></div>
                     <div>Project 2</div>
                     <div>Project 3</div>
                     <div>Project 4</div>
@@ -56,7 +61,7 @@
             <ul>
                 <li><a href="#work">Facebook</a></li>
                 <li><a href="#education">Instagram</a></li>
-                <li><a href="#projects">Twitter</a></li>
+                <li><a href="#projects"><i class="bi bi-twitter"></i></a></li>
                 <li><a href="#social">LinkedIn</a></li>
             </ul>
         </footer>
