--- a/index.html
+++ b/index.html
@@ -15,18 +15,31 @@
     <div class="container">
         <header>
             <nav>
-                <span>Donte Burney</span>
-                <ul>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#social">Social Media</a></li>
-                </ul>
+
+                <div class="nav-container">
+                    <div>Donte Burney</div>
+                    <div>
+                        <ul>
+                            <li><a href="#work">Work</a></li>
+                            <li><a href="#education">Education</a></li>
+                            <li><a href="#projects">Projects</a></li>
+                            <li><a href="#social">Social Media</a></li>
+                        </ul>
+                    </div>
+                </div>
+        
             </nav>
         </header>
         <main>
             <section id="#about">
-                <img id="profile-img" src="https://via.placeholder.com/150" />
+                <div class="profile-container">
+                    <img width="240px" src="./IMG_1441.jpg" />
+                    <div>
+                        Donte´ K Burney <br>
+                        Professor
+                    </div>
+                </div>
+               
             </section>
             <section id="work">
                 <h1>Work Experience</h1>
@@ -49,11 +62,11 @@
                 </div>
             </section>
             <section id="projects">
-                <div>
-                    <div><a href="portfolio.html">Project 1</a></div>
-                    <div>Project 2</div>
-                    <div>Project 3</div>
-                    <div>Project 4</div>
+                <div class="row image-container">
+                    <div class="col-md-3 icons"><a href="portfolio.html"><img class="logo-image" src="./2560px-UCLA_Bruins_logo.svg.png" /></a></div>
+                    <div class="col-md-3 icons"><a href="portfolio.html"><img class="logo-image" src="./TMZ_Logo.svg" /></a></div>
+                    <div class="col-md-3 icons"><a href="portfolio.html"><img class="logo-image" src="./FOX_wordmark.svg" /></a></div>
+                    <div class="col-md-3 icons"><a href="portfolio.html"><img class="logo-image" src="./768px-LinkedIn_logo_initials.png" /></a></div>
                 </div>
             </section>
         </main>
